# vmcp

./: .gitignore  LICENSE  PHASE1_COMPLETION.md  Python-vmcp-implementation-guide.md  README.md  pyproject.toml  vmcp-technical-spec.md
.github/workflows/: ci.yml
config/: example.toml
repositories/builtin/: repository.json
repositories/builtin/extensions/adios-mcp/: manifest.json
repositories/builtin/extensions/arxiv-mcp/: manifest.json
repositories/builtin/extensions/chronolog-mcp/: manifest.json
repositories/builtin/extensions/compression-mcp/: manifest.json
repositories/builtin/extensions/darshan-mcp/: manifest.json
repositories/builtin/extensions/hdf5-mcp/: manifest.json
repositories/builtin/extensions/jarvis-mcp/: manifest.json
repositories/builtin/extensions/lmod-mcp/: manifest.json
repositories/builtin/extensions/node-hardware-mcp/: manifest.json
repositories/builtin/extensions/pandas-mcp/: manifest.json
repositories/builtin/extensions/parallel-sort-mcp/: manifest.json
repositories/builtin/extensions/parquet-mcp/: manifest.json
repositories/builtin/extensions/plot-mcp/: manifest.json
repositories/builtin/extensions/slurm-mcp/: manifest.json
src/vmcp/: __init__.py  errors.py
src/vmcp/cli/: __init__.py  main.py
src/vmcp/config/: __init__.py  loader.py
src/vmcp/extensions/: __init__.py  manager.py
src/vmcp/gateway/: protocol.py  server.py
src/vmcp/gateway/transports/: base.py  stdio.py
src/vmcp/monitoring/: health.py  metrics.py
src/vmcp/registry/: registry.py
src/vmcp/repository/: __init__.py  discovery.py  installer.py  manager.py
src/vmcp/routing/: algorithms.py  circuit_breaker.py  connection_pool.py  loadbalancer.py  router.py
src/vmcp/testing/: __init__.py  mock_server.py
tests/: __init__.py  conftest.py  test_iowarp_integration.py
tests/integration/: __init__.py  test_cli_integration.py  test_end_to_end.py
tests/unit/: __init__.py  test_cli.py  test_config_loader.py  test_errors.py  test_extension_manager.py  test_registry.py
